@@ -1,39 +1,38 @@
 package com.epam.wca.gym.util;
 
-import com.epam.wca.gym.dto.training.TraineeTrainingDTO;
-import com.epam.wca.gym.dto.training.TrainerTrainingDTO;
+import com.epam.wca.gym.dto.training.TraineeTrainingQuery;
+import com.epam.wca.gym.dto.training.TrainerTrainingQuery;
 import com.epam.wca.gym.entity.Training;
 import lombok.experimental.UtilityClass;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @UtilityClass
 public class Filter {
     public static List<Training> filterTraineeTrainings(Set<Training> trainings,
-                                                        TraineeTrainingDTO traineeTrainingDTO) {
+                                                        TraineeTrainingQuery traineeTrainingQuery) {
         return trainings.stream()
-                .filter(training -> traineeTrainingDTO.dateFrom() == null ||
-                        training.getTrainingDate().isAfter(traineeTrainingDTO.dateFrom()))
-                .filter(training -> traineeTrainingDTO.dateTo() == null ||
-                        training.getTrainingDate().isBefore(traineeTrainingDTO.dateTo()))
-                .filter(training -> traineeTrainingDTO.trainerName() == null ||
-                        training.getTrainer().getUserName().equals(traineeTrainingDTO.trainerName()))
-                .filter(training -> traineeTrainingDTO.trainingType() == null ||
-                        training.getTrainingType().toString().equals(traineeTrainingDTO.trainingType()))
-                .collect(Collectors.toList());
+                .filter(training -> traineeTrainingQuery.dateFrom() == null ||
+                        training.getTrainingDate().isAfter(traineeTrainingQuery.dateFrom()))
+                .filter(training -> traineeTrainingQuery.dateTo() == null ||
+                        training.getTrainingDate().isBefore(traineeTrainingQuery.dateTo()))
+                .filter(training -> traineeTrainingQuery.trainerName() == null ||
+                        training.getTrainer().getUserName().equals(traineeTrainingQuery.trainerName()))
+                .filter(training -> traineeTrainingQuery.trainingType() == null ||
+                        training.getTrainingType().toString().equals(traineeTrainingQuery.trainingType()))
+                .toList();
     }
 
     public static List<Training> filterTrainerTrainings(Set<Training> trainings,
-                                                        TrainerTrainingDTO trainerTrainingDTO) {
+                                                        TrainerTrainingQuery trainerTrainingQuery) {
         return trainings.stream()
-                .filter(training -> trainerTrainingDTO.dateFrom() == null ||
-                        training.getTrainingDate().isAfter(trainerTrainingDTO.dateFrom()))
-                .filter(training -> trainerTrainingDTO.dateTo() == null ||
-                        training.getTrainingDate().isBefore(trainerTrainingDTO.dateTo()))
-                .filter(training -> trainerTrainingDTO.traineeName() == null ||
-                        training.getTrainee().getUserName().equals(trainerTrainingDTO.traineeName()))
-                .collect(Collectors.toList());
+                .filter(training -> trainerTrainingQuery.dateFrom() == null ||
+                        training.getTrainingDate().isAfter(trainerTrainingQuery.dateFrom()))
+                .filter(training -> trainerTrainingQuery.dateTo() == null ||
+                        training.getTrainingDate().isBefore(trainerTrainingQuery.dateTo()))
+                .filter(training -> trainerTrainingQuery.traineeName() == null ||
+                        training.getTrainee().getUserName().equals(trainerTrainingQuery.traineeName()))
+                .toList();
     }
 }
